# twFathom

./: .gitignore  CHANGELOG.md  README.md  _config.yml  mise.toml  pyproject.toml
.github/workflows/: build.yml
_includes/: head-custom.html
src/twfathom/: __main__.py  anomaly.py  app.py  bridge.py  collectors.py  db.py  parsers.py
src/twfathom/gui/common/css/: theme.css
src/twfathom/gui/dashboard/: dashboard.js  index.html
src/twfathom/gui/main/: index.html  main.js
src/twfathom/resources/: icon.icns  welcome.html
tests/: test_anomaly.py  test_auto_arrange.py  test_bridge.py  test_parsers.py
tests/test_data/: environment.csv  environment_multi.json  environment_openweathermap.json  environment_single.json  traffic.csv  traffic_list.json
